fix(MainPage): disabled hover on mobile

--- a/src/components/pages/main-page/MainPage.module.scss
+++ b/src/components/pages/main-page/MainPage.module.scss
@@ -62,11 +62,6 @@ $font-weight-bold: 700;
         clip-path: polygon(58% -10%, 100% 30%, 100% 96%, 88%  96%, 75% 100%, 0% 90%, 2% 75%, 4% 72%, 4% 50%);
         transition: color 225ms cubic-bezier(0.37, 0, 0.63, 1);
     }
-
-    svg:hover {
-        color: #fff;
-        filter: url('#filter_neon');
-    }
 }
 
 .buttons {
@@ -112,6 +107,16 @@ $font-weight-bold: 700;
 
 .card-holder {
     // outline: 2px solid pink;
+}
+
+@media only screen and (hover: hover) {
+    .build-image {
+
+        svg:hover {
+            color: #fff;
+            filter: url('#filter_neon');
+        }
+    }
 }
 
 @media only screen and (max-width: $breakpoint-desktop-semi-medium) {
